# cmake-template-project

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
appmy/: CMakeLists.txt
appmy/src/: IntPairMaker.cpp  IntPairMaker.h  appmy.cpp
appmy/tests/: CMakeLists.txt
appmy/tests/unit/: CMakeLists.txt  IntPairMakerTest.cpp
libconfigmy/: CMakeLists.txt
libconfigmy/include/: ConfigMy.h.in
libmy/: CMakeLists.txt
libmy/include/: ILibMy.h  LibMy.h
libmy/src/: LibMy.cpp  LibMyCounter.cpp  LibMyCounter.h  LibMyRandomizer.cpp  LibMyRandomizer.h  SleepPolicy.h
libmy/tests/: CMakeLists.txt
libmy/tests/component/: CMakeLists.txt  LibMyCounterTest.cpp  LibMyRandomizerTest.cpp
libmy/tests/unit/: CMakeLists.txt  LibMyCounterTest.cpp  LibMyRandomizerTest.cpp
libmy/tests/unit/mock/: MockLibMy.h
libutilsmy/: CMakeLists.txt
libutilsmy/include/: UtilsMy.h
tools/: build-portable-linux.sh  build-portable-windows.bat
